--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         run: go build -v .
 
       - name: Test
-        run: go test -v .
+        run: make test
 
       - name: Coverage
         uses: codecov/codecov-action@v1
